--- a/.github/workflows/build-lib-akdanmaku.yml
+++ b/.github/workflows/build-lib-akdanmaku.yml
@@ -30,26 +30,34 @@ jobs:
           rm -rf ~/.gradle/caches/transforms-*
           rm -rf ~/.android/build-cache/
 
-      # 使用 sparse-checkout 只克隆 akDanmaku 目录
-      - name: Checkout akDanmaku repository
+      # 使用 sparse-checkout 只克隆 akdanmaku 目录
+      - name: Checkout akdanmaku repository
         uses: actions/checkout@main
         with:
           repository: zxgv5/fantasy-bv
           ref: develop
           path: akdanmaku-source
           fetch-depth: 0
+          sparse-checkout: |
+            akdanmaku/
+            gradle/
+            gradlew
+            gradle.properties
+            settings.gradle.kts
+            build.gradle.kts
+          sparse-checkout-cone-mode: false
 
       # 环境变量初始化
       - name: Initialization values
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
-          echo "SOURCE_DIR=akdanmaku-source/akDanmaku" >> $GITHUB_ENV
+          echo "SOURCE_DIR=akdanmaku-source/akdanmaku" >> $GITHUB_ENV
           echo "AAR_NAME=lib-akdanmaku-release.aar" >> $GITHUB_ENV
 
-      # 验证akDanmaku目录结构
-      - name: Validate akDanmaku directory structure
+      # 验证akdanmaku目录结构
+      - name: Validate akdanmaku directory structure
         run: |
-          echo "=== 验证akDanmaku目录结构 ==="
+          echo "=== 验证akdanmaku目录结构 ==="
           ls -la ${{ env.SOURCE_DIR }}/
           
           if [ -f "${{ env.SOURCE_DIR }}/build.gradle.kts" ] || [ -f "${{ env.SOURCE_DIR }}/build.gradle" ]; then
@@ -89,24 +97,24 @@ jobs:
           echo "Gradle 版本信息:"
           ./gradlew --version
 
-      # 构建akDanmaku模块
-      - name: Build danmaku module (akDanmaku)
+      # 构建akdanmaku模块
+      - name: Build danmaku module
         id: build_akdanmaku
         working-directory: ./akdanmaku-source
         run: |
-          echo "=== 开始编译弹幕库 (akDanmaku) ==="
-          ./gradlew :akDanmaku:assembleRelease --no-daemon --stacktrace
+          echo "=== 开始编译弹幕库 (akdanmaku) ==="
+          ./gradlew :akdanmaku:assembleRelease --no-daemon --stacktrace
           
-          echo "=== akDanmaku 编译完成 ==="
+          echo "=== akdanmaku 编译完成 ==="
           echo "查找AAR产物:"
-          AAR_FILE=$(find akDanmaku/build/outputs/aar -name "*.aar" -type f | head -1)
+          AAR_FILE=$(find akdanmaku/build/outputs/aar -name "*.aar" -type f | head -1)
           if [ -n "$AAR_FILE" ]; then
             echo "找到AAR文件: $AAR_FILE"
             echo "文件大小: $(ls -lh "$AAR_FILE" | awk '{print $5}')"
             # 重命名AAR文件为固定名称
-            mv "$AAR_FILE" "akDanmaku/build/outputs/aar/${{ env.AAR_NAME }}"
+            mv "$AAR_FILE" "akdanmaku/build/outputs/aar/${{ env.AAR_NAME }}"
             echo "重命名为: ${{ env.AAR_NAME }}"
-            echo "aar_path=akDanmaku/build/outputs/aar/${{ env.AAR_NAME }}" >> $GITHUB_OUTPUT
+            echo "aar_path=akdanmaku/build/outputs/aar/${{ env.AAR_NAME }}" >> $GITHUB_OUTPUT
           else
             echo "错误: 未找到AAR文件！"
             exit 1
@@ -116,27 +124,26 @@ jobs:
       - name: Set output variables
         id: output_vars
         run: |
-          echo "aar_path=akDanmaku/build/outputs/aar/${{ env.AAR_NAME }}" >> $GITHUB_OUTPUT
+          echo "aar_path=akdanmaku/build/outputs/aar/${{ env.AAR_NAME }}" >> $GITHUB_OUTPUT
 
       # 上传构建产物
       - name: Upload AAR artifact
         uses: actions/upload-artifact@main
         with:
-          name: akDanmaku-aar
-          path: akdanmaku-source/akDanmaku/build/outputs/aar/${{ env.AAR_NAME }}
+          name: akdanmaku-aar
+          path: akdanmaku-source/akdanmaku/build/outputs/aar/${{ env.AAR_NAME }}
           retention-days: 30
 
       # 可选：创建GitHub Release（如果需要独立发布）
-      - name: Create github release for akDanmaku
+      - name: Create github release for akdanmaku
         if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: softprops/action-gh-release@master
         with:
-          tag_name: akdanmaku-${{ env.BUILD_DATE }}
-          name: akDanmaku ${{ env.BUILD_DATE }}
+          tag_name: ${{ env.BUILD_DATE }}-akdanmaku
           draft: false
           prerelease: false
           files: |
-            akdanmaku-source/akDanmaku/build/outputs/aar/${{ env.AAR_NAME }}
+            akdanmaku-source/akdanmaku/build/outputs/aar/${{ env.AAR_NAME }}
             
       # 使用SSH Deploy Key的方式来实现对bv-libs的推送
       # 生成ED25519密钥对（更安全，推荐）
@@ -200,7 +207,7 @@ jobs:
           git checkout main
           
           # 复制新的 AAR 文件到目标位置
-          SOURCE_AAR="$GITHUB_WORKSPACE/akdanmaku-source/akDanmaku/build/outputs/aar/${{ env.AAR_NAME }}"
+          SOURCE_AAR="$GITHUB_WORKSPACE/akdanmaku-source/akdanmaku/build/outputs/aar/${{ env.AAR_NAME }}"
           TARGET_DIR="akDanmaku"
           
           # 检查 AAR 文件是否存在
@@ -230,7 +237,7 @@ jobs:
           else
             echo "✗ Error: AAR file not found at $SOURCE_AAR"
             echo "Searching for AAR files..."
-            find "$GITHUB_WORKSPACE/akdanmaku-source/akDanmaku/" -name "*.aar" -type f 2>/dev/null | while read file; do
+            find "$GITHUB_WORKSPACE/akdanmaku-source/akdanmaku/" -name "*.aar" -type f 2>/dev/null | while read file; do
               echo "  Found: $file"
             done
             exit 1
