--- a/.github/workflows/build-lib-vlc.yml
+++ b/.github/workflows/build-lib-vlc.yml
@@ -19,7 +19,6 @@ jobs:
         with:
           tool-cache: false
           mandb: true
-          android: true
           dotnet: true
           haskell: true
           
@@ -48,19 +47,6 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           cache: 'gradle'
-
-      - name: Download and setup ndk r29
-        run: |
-          # 1. 创建 NDK 目录
-          mkdir -p $ANDROID_SDK_ROOT/ndk
-          # 2. 下载官方 NDK r29 (以 Linux 64位为例)
-          wget -q https://dl.google.com/android/repository/android-ndk-r29-linux.zip
-          # 3. 解压到 SDK 的 ndk 目录下，并重命名为固定路径
-          unzip -q android-ndk-r29-linux.zip -d $ANDROID_SDK_ROOT/ndk/
-          mv $ANDROID_SDK_ROOT/ndk/android-ndk-r29 $ANDROID_SDK_ROOT/ndk/29.0.0
-          # 4. 设置环境变量（后续步骤和 compile.sh 都需要）
-          echo "ANDROID_NDK=$ANDROID_SDK_ROOT/ndk/29.0.0" >> $GITHUB_ENV
-          echo "NDK_ROOT=$ANDROID_SDK_ROOT/ndk/29.0.0" >> $GITHUB_ENV
 
       - name: Install system dependencies
         run: |
@@ -140,31 +126,58 @@ jobs:
             exit 1 # 使步骤失败
           fi
 
-      - name: Build libvlc for armeabi-v7a
+      - name: Download and setup ndk r21 for armeabi-v7a build need
         run: |
-          cd "${{ env.BUILD_DIR }}"
-          echo "清理前一次构建的中间产物..."
-          # 只清理AAR输出，保留已下载的源码和贡献库以加速第二次构建
-          rm -rf libvlcjni/libvlc/build/outputs/aar/*.aar 2>/dev/null || true
-          
-          echo "开始构建 ARMv7 (armeabi-v7a) 架构..."
-          export ANDROID_SDK="$ANDROID_SDK_ROOT"
-          export ANDROID_NDK="$ANDROID_NDK_ROOT"
-          
-          # 第二次构建同样尝试使用预构建库，并利用已下载的源代码
-          time ./buildsystem/compile.sh -l -a arm --release -t 2>&1 | tee build_armv7.log
-          
-          if ls libvlcjni/libvlc/build/outputs/aar/*.aar 1> /dev/null 2>&1; then
-            echo "✅ ARMv7 AAR 构建成功！"
-            cp libvlcjni/libvlc/build/outputs/aar/*.aar ../libvlc-armv7.aar
-          else
-            echo "❌ 未找到ARMv7 AAR文件。关键错误如下:"
-            # 提取日志中的错误部分
-            grep -A 5 -B 5 -i "error\|failed\|ndk\|could not" build_armv7.log | head -50
-            echo "完整日志请查看 Artifacts 中的 build_armv7.log"
-            exit 1
-          fi
+          # 1. 创建 NDK 目录
+          mkdir -p $ANDROID_SDK_ROOT/ndk
+          # 2. 下载官方 NDK r21 (以 Linux 64位为例)
+          wget -q https://dl.google.com/android/repository/android-ndk-r21e-linux-x86_64.zip
+          # 3. 解压到 SDK 的 ndk 目录下，并重命名为固定路径
+          unzip -q android-ndk-r21e-linux-x86_64.zip -d $ANDROID_SDK_ROOT/ndk/
+          mv $ANDROID_SDK_ROOT/ndk/android-ndk-r21e $ANDROID_SDK_ROOT/ndk/21.0.0
+          # 4. 设置环境变量（后续步骤和 compile.sh 都需要）
+          echo "ANDROID_NDK=$ANDROID_SDK_ROOT/ndk/21.0.0" >> $GITHUB_ENV
+          echo "NDK_ROOT=$ANDROID_SDK_ROOT/ndk/21.0.0" >> $GITHUB_ENV
 
+- name: Build libvlc for armeabi-v7a
+  run: |
+    cd "${{ env.BUILD_DIR }}"
+    echo "清理前一次构建的中间产物..."
+    rm -rf libvlcjni/libvlc/build/outputs/aar/*.aar 2>/dev/null || true
+    
+    echo "检查当前 NDK 环境..."
+    # 备份并移除可能冲突的 NDK
+    if [ -d "$ANDROID_SDK_ROOT/ndk-bundle" ]; then
+      echo "发现 ndk-bundle，可能引起冲突，重命名..."
+      mv "$ANDROID_SDK_ROOT/ndk-bundle" "$ANDROID_SDK_ROOT/ndk-bundle.backup"
+    fi
+    
+    # 确保使用我们下载的 NDK r21
+    export ANDROID_NDK="${{ env.ANDROID_NDK }}"
+    export NDK_ROOT="${{ env.NDK_ROOT }}"
+    export ANDROID_NDK_ROOT="${{ env.ANDROID_NDK }}"
+    
+    # 验证使用的 NDK
+    echo "使用的 NDK 路径: $ANDROID_NDK"
+    $ANDROID_NDK/ndk-build --version | head -5
+    
+    # 更新 local.properties
+    echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
+    echo "ndk.dir=$ANDROID_NDK" >> local.properties
+    
+    echo "开始构建 ARMv7 (armeabi-v7a) 架构..."
+    # 使用 -b 参数绕过一些检查（如果需要）
+    time ./buildsystem/compile.sh -l -a arm --release -t -b 2>&1 | tee build_armv7.log
+    
+    if ls libvlcjni/libvlc/build/outputs/aar/*.aar 1> /dev/null 2>&1; then
+      echo "✅ ARMv7 AAR 构建成功！"
+      cp libvlcjni/libvlc/build/outputs/aar/*.aar ../libvlc-armv7.aar
+    else
+      echo "❌ 未找到ARMv7 AAR文件。关键错误如下:"
+      grep -A 10 -B 5 -i "error\|failed\|ndk\|could not\|v21 needed" build_armv7.log | head -100
+      exit 1
+    fi
+    
       - name: Merge aars and verify
         if: always() # 即使上一步有警告也继续执行
         run: |
