--- a/.github/workflows/build-lib-vlc.yml
+++ b/.github/workflows/build-lib-vlc.yml
@@ -14,6 +14,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Free disk space ubuntu-latest
+        uses: BRAINSia/free-disk-space@main
+        with:
+          tool-cache: false
+          mandb: true
+          dotnet: true
+          haskell: true
+          
       - name: Clean runner environment
         run: |
           rm -rf ~/.gradle/caches/transforms-*
@@ -136,31 +144,49 @@ jobs:
           cd "${{ env.BUILD_DIR }}"
           echo "清理前一次构建的中间产物..."
           rm -rf libvlcjni/libvlc/build/outputs/aar/*.aar 2>/dev/null || true
-    
+
           echo "检查当前 NDK 环境..."
           # 备份并移除可能冲突的 NDK
           if [ -d "$ANDROID_SDK_ROOT/ndk-bundle" ]; then
             echo "发现 ndk-bundle，可能引起冲突，重命名..."
             mv "$ANDROID_SDK_ROOT/ndk-bundle" "$ANDROID_SDK_ROOT/ndk-bundle.backup"
           fi
-    
-          # 确保使用我们下载的 NDK r21
+
+          # 设置正确的环境变量 - 这是关键！
           export ANDROID_NDK="${{ env.ANDROID_NDK }}"
-          export NDK_ROOT="${{ env.NDK_ROOT }}"
+          export ANDROID_SDK="$ANDROID_SDK_ROOT"
           export ANDROID_NDK_ROOT="${{ env.ANDROID_NDK }}"
+          export ANDROID_SDK_ROOT="$ANDROID_SDK_ROOT"
     
+          # 打印环境变量用于调试
+          echo "=== 环境变量检查 ==="
+          echo "ANDROID_NDK: $ANDROID_NDK"
+          echo "ANDROID_SDK: $ANDROID_SDK"
+          echo "ANDROID_NDK_ROOT: $ANDROID_NDK_ROOT"
+          echo "ANDROID_SDK_ROOT: $ANDROID_SDK_ROOT"
+
           # 验证使用的 NDK
           echo "使用的 NDK 路径: $ANDROID_NDK"
           $ANDROID_NDK/ndk-build --version | head -5
-    
+
           # 更新 local.properties
           echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
           echo "ndk.dir=$ANDROID_NDK" >> local.properties
-    
+
           echo "开始构建 ARMv7 (armeabi-v7a) 架构..."
-          # 使用 -b 参数绕过一些检查（如果需要）
-          time ./buildsystem/compile.sh -l -a arm --release -t -b 2>&1 | tee build_armv7.log
+          # 先检查脚本是否存在
+          if [ ! -f "./buildsystem/compile.sh" ]; then
+            echo "错误: compile.sh 脚本不存在！"
+            exit 1
+          fi
     
+          # 给脚本添加执行权限
+          chmod +x ./buildsystem/compile.sh
+    
+          # 在命令行中直接传递环境变量
+          time ANDROID_NDK="$ANDROID_NDK" ANDROID_SDK="$ANDROID_SDK" \
+              ./buildsystem/compile.sh -l -a arm --release -t -b 2>&1 | tee build_armv7.log
+
           if ls libvlcjni/libvlc/build/outputs/aar/*.aar 1> /dev/null 2>&1; then
             echo "✅ ARMv7 AAR 构建成功！"
             cp libvlcjni/libvlc/build/outputs/aar/*.aar ../libvlc-armv7.aar
@@ -169,7 +195,7 @@ jobs:
             grep -A 10 -B 5 -i "error\|failed\|ndk\|could not\|v21 needed" build_armv7.log | head -100
             exit 1
           fi
-    
+
       - name: Merge aars and verify
         if: always() # 即使上一步有警告也继续执行
         run: |
